# wavetools

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: cat.rs  diff.rs  lib.rs
src/vcd/: README.md  attribute.rs  mod.rs  parser.rs  scope.rs  timescale.rs  value.rs  write.rs
tests/: attr_tests.rs  cat_option_tests.rs  cat_tests.rs  copyright_test.rs  diff_test.rs  set_tests.rs  source_test.rs
tests/common/: mod.rs
tests/data/: alias_types.vcd  attrs.vcd  counter.change_reorder.no_diff.fst  counter.edge_time.diff.fst  counter.end_time.diff.fst  counter.end_time.diff.vcd  counter.new_sig.diff.fst  counter.scope_move.no_diff.fst  counter.shared_handle.no_diff.fst  counter.sig_name.diff.fst  counter.time.no_diff.fst  counter.value.diff.fst  counter.value.diff.vcd  counter.var_reorder.no_diff.fst  counter.vcd  enum_attrs.a.vcd  enum_attrs.b.vcd  enum_attrs.missing.vcd  enum_no_conflict.vcd  escaped_names.vcd  idcode_a.vcd  idcode_b.vcd  range.vcd  real_base.fst  real_base.vcd  real_close.vcd  real_far.vcd  set_clk.vcd  set_counter.vcd  set_counter_modified.vcd  set_overlap.vcd  struct_attrs.vcd  type_mismatch.a.vcd  type_mismatch.b.vcd  wide_bits.vcd
tests/data/error/: enum_conflict.vcd
tests/data/expected/: alias_types.cat  alias_types.names  alias_types.vcd.attrs  attrs.cat  attrs.vcd.attrs  counter.change_reorder.no_diff.names  counter.edge_time.diff.cat  counter.end_time.diff.cat  counter.identifier.no_diff.cat  counter.new_sig.diff.fst.attrs  idcode_a.names  (+48 more)
vcd/src/: attribute.rs  lib.rs  parser.rs  scope.rs  write.rs
